css/styles.css
body
{
  box-sizing: border-box;
  text-align: center;
  font-family: 'Karla', sans-serif;  
  margin: 0;
  padding: 0;
  background: #232323;
  color: #cdcdcd;
  padding-bottom: 40px;
}

a
{
  text-decoration: none;
  color: #232323;
  transition: color 0.3s ease;
}

a:hover
{
  color: rgb(242, 104, 79);
  font-weight: 700;
}

#menuToggle
{
  display: block;
  position: relative;
  top: 30px;
  left: 30px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0; 
  z-index: 2; 
  -webkit-touch-callout: none;
}


#menuToggle span
{
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: #cdcdcd;
  border-radius: 3px;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

#menuToggle span:first-child
{
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}


#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}


#menuToggle input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}


#menuToggle input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px);
}


#menu
{
  position: absolute;
  width: 250px;
  margin: -100px 0 0 -50px;
  padding: 40px;
  padding-top: 100px;
  border-radius: 4px;
  background: #ededed;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

#menu li
{
  padding: 12px 0;
  font-size: 22px;
}


#menuToggle input:checked ~ ul
{
  transform: none;
}


.container {
    position: relative;
    padding-top: 40px;
    width: 85%;
    text-align: center;
    margin: 0 auto;
}

h1 {
    font-size: 1.5em;
}

h2 {
    font-family: 'Chilanka', cursive;
    font-size: 1.2em;
     margin: 20px auto;
}

.me {
    width: 45%;
    border-radius: 50%;
    margin: 1em;
}

.infoLinks {
    display: none;
}

p {
    text-align: left;
    font-size: 12px;
    line-height: 16px;;
    margin: 20px 8%;
}

.large {
    display: none;
}

.bio {
    margin-bottom: 4em;
}

.emf {
    font-weight: 700;
}

.small {
    font-size: 0.9em;
}

.projectContainer {
    margin-bottom: 40px;
  
}

.projectTitle {
    font-size: 1em;
    margin-bottom: 1em;
   
}

.screen {
    width: 80%;
}

.projectText {
    margin: 5px 8%;
    padding-left: 5px;
   
    line-height: 1.1em;
}

.projectLink {
    padding: 0 10px;
    font-size: 12px;
    font-weight: 700;
    text-decoration: none;
    color: #ededed;
}

.vr {
    display: inline; 
    border: 1px solid #363739;
}

.largeCont {
    display: none;
}


footer {
    margin-top: 5em;
    background: #363739;
    line-height: 2em;
    font-size: 0.9em;
    width: 100%;
    position: fixed;
    bottom: 0;
    right: 0;
    left: 0;
    border-top-left-radius: 0.2em;
    border-top-right-radius: 0.2em;
    color: #ffffff;
}
 footer a {
     color: #ffffff;
     text-decoration: none;
 }

@media screen and (min-width: 400px) {

    .intro {
        font-size: 2em;
    }

    .me {
        width: 35%;
        margin: 2.5em;
    }

    h2 {
        font-size: 2em;
        margin: 30px auto;
    }

    p {
        font-size: 1em;
        line-height: 1.2em;
    }

    .screen {
        width: 80%;
    }

    .projectTitle {
        font-size: 1.1em;
    }

    .projectLink {
        font-size: 0.9em;
    }
   

    footer {
        font-size: 1.5em;
    }

}

@media screen and (min-width: 800px) {
  

  nav, .projects, .intro, .about {
    display: none;
  }

  main {
    display: flex;
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
  }

  header {
      position: fixed;
      left: 5%;
      top: 10%;

  }
   .infoLinks {
      display: flex;
      flex: 1;
      flex-direction: column;
      margin-top: 20px;
  }

   .me {
      width: 50%;
      margin-top: 20vh;
  }

  .infoLink {
      text-decoration: none;
      margin: 7px;
      color: #ededed;
  }

  .bio, .projects, .largeCont {
    position: relative;
    width: 75%;
    right: 10%;
    left: 25%;
    top: 10%;
  }

  .bio {
    margin-top: 15%;
  }


  .screen {
      width: 80%;
  }

  .large {
      display: block;
      margin-bottom: 2em;
  }

  .largeCont {
      padding-top: 30vh;
  }

  .contLinks-lg {
      color: #ededed;
      font-size: 2em;
      margin: 20px;
      text-decoration: none;
    
  }

  .projectText {
      line-height: 1.2em;
  }

  .projectTitle {
      font-size: 1.4em;
  }

  .projectContainer {
      margin-bottom: 80px;
  }

    footer {
      font-size: 1em;
  }

}

